Docs change and refractor of update player
